fix padding on ios

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 50px 15px 15px 50px; 
+  padding: 50px 15px 15px 15px; 
   margin-right: auto;
   margin-bottom: 35px;
   margin-top: -25px; 
